selfhost/test/typechecker/continue/error_location_module_func.out
Error at %FILE_NAME%:2:3
Invalid location for continue statement
  |    continue
       ^
Continue statements can only be used within loop bodies
